Updated 'What Should I Do?'/'As a User'-FAQ

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -381,23 +381,20 @@
                   </mat-panel-title>
                 </mat-expansion-panel-header>
                 <p class="mat-body-2">
-                  The most important thing right now is to get this information out to the modem manufacturers as
-                  quickly as possible, such that firmware updates can be created for modems still affected.
+                  If you have the ability to update your cable modem yourself, do so if your manufacturer have released a patch that fixes the vulnerability.
+                  Unfortunately most ISPs does not allow users to update their modems themselves.
+                  Therefore, for most people the important thing right now is to get this information out to the modem manufacturers as quickly as possible, preferably through your ISP, such that firmware updates can be created and pushed to the modems by the ISP.
                   If your ISP have already reported to us that they have fixed the issue, we will add them to the <a
                     (click)="scrollToAndExpand('faq-am-i-affected', 0)">list above</a>.
-                  If your ISP is not in this list, we recommend that you contact them and ask if your unit is or ever
-                  was vulnerable to Cable Haunt.
+                  If your ISP is not in this list, we recommend that you contact them and ask if your unit is or ever was vulnerable to Cable Haunt.
                 </p>
                 <p class="mat-body-2">
-                  If you are the owner of your modem, start by checking if the modem is on the <a
-                    (click)="scrollToExpandScrollTo('faq-am-i-affected','faq-vulnerable-modems-sub', 0)">list
-                    of vulnerable modems</a>, and if it has an updated firmware available. Even if your modem is not on
-                  the list, it may still be vulnerable. Check with the manufacturer of your modem if the latest firmware
-                  prevents Cable Haunt, and if the modem were ever vulnerable. If you suspect that your modem has been
-                  compromised, update the firmware to a version not vulnerable to Cable Haunt. Then you should consider
-                  if your past non-encrypted internet traffic contains sensitive information, such as passwords or
-                  personal
-                  emails, and take precautions accordingly.
+                  If you are a bit more technical, start by checking if the modem is on the <a (click)="scrollToExpandScrollTo('faq-am-i-affected','faq-vulnerable-modems-sub', 0)">list of vulnerable modems</a>. 
+                  Even if your modem is not on the list, it may still be vulnerable.
+                  We recommend trying see if the Spectrum Analyzer is available and vulnerable.
+                  It can most commonly be found on <a href="http://192.168.100.1:8080">http://192.168.100.1:8080</a> but not always, so please use a port scanner if available.
+                  If found it can be tested with the javascript command or script found <a (click)="scrollToCenter('test-script-repo-button')">above</a>.
+                  The script can also help you locate the Spectrum Analyzer automatically.
                 </p>
               </mat-expansion-panel>
               <mat-expansion-panel>
