Added pagination, sorting and filtering for user reported modems

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.mat-form-field {
+  padding-top: 30px;
+  width: 100%;
+}
 
 .navigation {
   display: flex;
