--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -178,7 +178,7 @@
           <div class="mat-title">Exploit Demonstration</div>
           <p class="mat-body-2">
             Below we have a video demonstrating how the Cable Haunt vulnerability can be exploited on the Sagemcom F@st
-            3890 modem. The code executing this exploit can be fount in the <a
+            3890 modem. The code executing this exploit can be found in the <a
               href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit">POC repository</a>. We chose to make a full
             exploit for this modem as we have confirmation from Sagemcom that they have a patch ready for this
             particular modem. We recommend everyone, customers and ISPs, to update to this firmware.
