--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -183,8 +183,9 @@
             exploit for this modem as we have confirmation from Sagemcom that they have a patch ready for this
             particular modem. We recommend everyone, customers and ISPs, to update to this firmware.
           </p>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/5FM9mS5ck3Y" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="youtube-container" layout="row" layout-align="center center">
+            <iframe height="100%" width="100%" src="https://www.youtube.com/embed/5FM9mS5ck3Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
           <div id="questions-and-answers" class="mat-display-2 center">
             FAQ
           </div>
@@ -217,8 +218,9 @@
                   <mat-list-item> Com Hem / Tele2 - Sweden (Patch being deployed. Power cycles will update vulnerable
                     modems.) </mat-list-item>
                   <mat-list-item> NetCologne / NetAachen – Germany (Doesn't use Broadcom-based Modems) </mat-list-item>
-                  <mat-list-item> Vodafone Germany (According to their twitter:
-                    https://twitter.com/vodafoneservice/status/1216771645265924098) </mat-list-item>
+                  <mat-list-item> Vodafone Germany (According to their <a target="_blank" href="https://twitter.com/vodafoneservice/status/1216771645265924098">twitter</a>)</mat-list-item>
+                  <mat-list-item> Tele Columbus / PYUR - Germany </mat-list-item>
+                  <mat-list-item> Kabelplus - Austria </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
@@ -254,60 +256,72 @@
             <p class="mat-body-2">
               <b>Modems confirmed by ISPs or us</b>
             </p>
-            <table mat-table [dataSource]="vulnerableModemsDataSource" class="mat-elevation-z8 mat-body-2">
-              <ng-container matColumnDef="model">
-                <th mat-header-cell *matHeaderCellDef> Model </th>
-                <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-              </ng-container>
-              <ng-container matColumnDef="firmwareVersion">
-                <th mat-header-cell *matHeaderCellDef> Firmware Version </th>
-                <td mat-cell *matCellDef="let element"> {{element.firmwareVersion}} </td>
-              </ng-container>
-              <ng-container matColumnDef="port">
-                <th mat-header-cell *matHeaderCellDef> Port </th>
-                <td mat-cell *matCellDef="let element"> {{element.port}} </td>
-              </ng-container>
-              <ng-container matColumnDef="defaultUser">
-                <th mat-header-cell *matHeaderCellDef> Default Credentials </th>
-                <td mat-cell *matCellDef="let element"> {{element.defaultUser}} </td>
-              </ng-container>
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
+            <div class="mat-elevation-z8">
+              <p class="mat-body-2">  
+                <mat-form-field>
+                  <input matInput (keyup)="applyFilterISP($event.target.value)" placeholder="Filter">
+                </mat-form-field>
+              </p>
+              <div class="table-container">
+                <mat-table #vulnerableModemsTable="matSort" matSort mat-table [dataSource]="vulnerableModemsDataSource">
+                  <ng-container matColumnDef="model" sticky>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
+                    <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="firmwareVersion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Firmware Version </th>
+                    <td mat-cell *matCellDef="let element"> {{element.firmwareVersion}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="port">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Port </th>
+                    <td mat-cell *matCellDef="let element"> {{element.port}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="defaultUser">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Default Credentials </th>
+                    <td mat-cell *matCellDef="let element"> {{element.defaultUser}} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </mat-table>
+              </div>
+              <mat-paginator #vulnerableModemsPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator >
+            </div>
             <p class="mat-body-2">
               <b>Modems confirmed by the community</b>
             </p>
-            <div class="mat-elevation-z8 mat-body-2">
+            <div class="mat-elevation-z8">
               <p class="mat-body-2">  
                 <mat-form-field>
-                  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                  <input #communityVulnerableModemsFilter matInput (keyup)="applyFilterCommunity($event.target.value)" placeholder="Filter">
                 </mat-form-field>
               </p>
-              <table mat-table [dataSource]="communityVulnerableModemsDataSource" matSort>
-                <ng-container matColumnDef="model">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
-                  <td mat-cell *matCellDef="let element"> {{element.model}} </td>
-                </ng-container>
-                <ng-container matColumnDef="firmwareVersion">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Firmware Version </th>
-                  <td mat-cell *matCellDef="let element"> {{element.firmwareVersion}} </td>
-                </ng-container>
-                <ng-container matColumnDef="port">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Port </th>
-                  <td mat-cell *matCellDef="let element"> {{element.port}} </td>
-                </ng-container>
-                <ng-container matColumnDef="defaultUser">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Default Credentials </th>
-                  <td mat-cell *matCellDef="let element"> {{element.defaultUser}} </td>
-                </ng-container>
-                <ng-container matColumnDef="isp">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> ISP of Reporter </th>
-                  <td mat-cell *matCellDef="let element"> {{element.isp}} </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedUserReportedModemColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedUserReportedModemColumns;"></tr>
-              </table>
-              <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+              <div class="table-container">
+                <mat-table #communityVulnerableModemsTable="matSort" matSort mat-table [dataSource]="communityVulnerableModemsDataSource" matSort>
+                  <ng-container matColumnDef="model" sticky>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Model </th>
+                    <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="firmwareVersion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Firmware Version </th>
+                    <td mat-cell *matCellDef="let element"> {{element.firmwareVersion}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="port">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Port </th>
+                    <td mat-cell *matCellDef="let element"> {{element.port}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="defaultUser">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Default Credentials </th>
+                    <td mat-cell *matCellDef="let element"> {{element.defaultUser}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="isp">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ISP of Reporter </th>
+                    <td mat-cell *matCellDef="let element"> {{element.isp}} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedUserReportedModemColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedUserReportedModemColumns;"></tr>
+                </mat-table>
+              </div>
+              <mat-paginator #communityVulnerableModemsPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
             </div>
             <p class="mat-body-2">
               If your modem is not in the lists above it could still be vulnerable.
