--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -221,6 +221,7 @@
                   <mat-list-item> NetCologne / NetAachen – Germany (Doesn't use Broadcom-based Modems) </mat-list-item>
                   <mat-list-item> PŸUR - Germany </mat-list-item>
                   <mat-list-item> Kabelplus - Austria </mat-list-item>
+                  <mat-list-item> Telenet - Netherlands </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
