--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,24 +63,13 @@
             <mat-card fxLayout="column">
               <mat-card-title>Technical Report</mat-card-title>
               <mat-card-content>
-                <p class="mat-body-2">Here you can download the technical report, if you wish to verify our findings, or
+                <p>Here you can download the technical report, if you wish to verify our findings, or
                   help expand the research</p>
               </mat-card-content>
               <mat-card-actions>
                 <a id="technical-report-download-button"
                   href="https://github.com/Lyrebirds/Cable-Haunt-Report/releases/latest/download/report.pdf"
                   mat-raised-button color="primary">Download</a>
-              </mat-card-actions>
-            </mat-card>
-            <mat-card fxLayout="column">
-              <mat-card-title>POC Exploit</mat-card-title>
-              <mat-card-content>
-                <p>Here you have a proof of concept exploit for the sagemcom F@st 3890 modem, if you want to try out
-                  exploiting Cable Haunt for yourself.</p>
-              </mat-card-content>
-              <mat-card-actions>
-                <a target="_blank" href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit" mat-raised-button
-                  color="primary">View Exploit</a>
               </mat-card-actions>
             </mat-card>
             <mat-card fxLayout="column">
@@ -94,6 +83,20 @@
                 <a id="test-script-repo-button" target="_blank"
                   href="https://github.com/Lyrebirds/cable-haunt-vulnerability-test" mat-raised-button
                   color="primary">View Script</a>
+              </mat-card-actions>
+            </mat-card>
+            <mat-card fxLayout="column">
+              <mat-card-title>Exploit POC</mat-card-title>
+              <mat-card-content>
+                <p>We have currently developed two POC. One for Sagemcom F@st 3890 (exploit server can only be hosted locally) and one for Technicolor TC7230 (exploit server can be hosted remotely).</p>
+              </mat-card-content>
+              <mat-card-actions>
+                <div class="center-container">
+                <a target="_blank" href="https://github.com/Lyrebirds/technicolor-tc7230-exploit" mat-raised-button
+                  color="primary">Technicolor</a>
+                <a target="_blank" href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit" mat-raised-button
+                  color="primary">Sagem</a>
+                </div>
               </mat-card-actions>
             </mat-card>
           </div>
