added magenta isp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,14 +88,15 @@
             <mat-card fxLayout="column">
               <mat-card-title>Exploit POC</mat-card-title>
               <mat-card-content>
-                <p>We have currently developed two POC. One for Sagemcom F@st 3890 (exploit server can only be hosted locally) and one for Technicolor TC7230 (exploit server can be hosted remotely).</p>
+                <p>We have currently developed two POC. One for Sagemcom F@st 3890 (exploit server can only be hosted
+                  locally) and one for Technicolor TC7230 (exploit server can be hosted remotely).</p>
               </mat-card-content>
               <mat-card-actions>
                 <div class="center-container">
-                <a target="_blank" href="https://github.com/Lyrebirds/technicolor-tc7230-exploit" mat-raised-button
-                  color="primary">Technicolor</a>
-                <a target="_blank" href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit" mat-raised-button
-                  color="primary">Sagem</a>
+                  <a target="_blank" href="https://github.com/Lyrebirds/technicolor-tc7230-exploit" mat-raised-button
+                    color="primary">Technicolor</a>
+                  <a target="_blank" href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit" mat-raised-button
+                    color="primary">Sagem</a>
                 </div>
               </mat-card-actions>
             </mat-card>
@@ -225,6 +226,7 @@
                   <mat-list-item> PŸUR - Germany </mat-list-item>
                   <mat-list-item> Kabelplus - Austria </mat-list-item>
                   <mat-list-item> Telenet - Netherlands </mat-list-item>
+                  <mat-list-item> Magenta - Austria </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
