changed button text for POC

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,9 +94,9 @@
               <mat-card-actions>
                 <div class="center-container">
                   <a target="_blank" href="https://github.com/Lyrebirds/technicolor-tc7230-exploit" mat-raised-button
-                    color="primary">Technicolor</a>
+                    color="primary">TC7230</a>
                   <a target="_blank" href="https://github.com/Lyrebirds/sagemcom-fast-3890-exploit" mat-raised-button
-                    color="primary">Sagem</a>
+                    color="primary">F@st 3890</a>
                 </div>
               </mat-card-actions>
             </mat-card>
