added vidanet as secure isp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,6 +227,7 @@
                   <mat-list-item> Kabelplus - Austria </mat-list-item>
                   <mat-list-item> Telenet - Netherlands </mat-list-item>
                   <mat-list-item> Magenta - Austria </mat-list-item>
+                  <mat-list-item> Vidanet - Hungary </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
