added docsis check

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -482,6 +482,12 @@
                   necessary precautions against potential attacks that could have happened while the modem was
                   vulnerable.
                 </p>
+                <p class="mat-body-2">
+                  As a last resort, for some modems, the vulnerability can be mitigated with DOCSIS provisioning, by
+                  blocking the port and/or ip of the spectrum analyzer. However, we highly discourage this type of
+                  mitigation as a long term solution, as the vulnerability is still present, and might be abused in
+                  another form. If you desire more information, please reach out to us directly.
+                </p>
               </mat-expansion-panel>
               <mat-expansion-panel>
                 <mat-expansion-panel-header>
