--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -387,7 +387,7 @@
               still vulnerable even in bridge mode, so this is definitely not a security guarantee.
               If your modem is running behind a separate router/gateway, you might be safe by configuring a firewall
               restriction on the Spectrum Analyzer. In any case, it is a decent mitigation strategy, while waiting for
-              your ISP to roll out deployments.
+              your ISP to roll out a new firmware.
             </p>
           </mat-expansion-panel>
           <mat-expansion-panel [(expanded)]="expanded[3]">
